--- a/unit-6/sample-microservice/static/functions.html
+++ b/unit-6/sample-microservice/static/functions.html
@@ -39,7 +39,7 @@ jQuery(document).ready(function ($) {
             data: JSON.stringify(data),
             contentType: 'application/json',
             success: function( data, textStatus, jQxhr ) {
-                $('#result').append(JSON.stringify(data));
+                $('#result').append(JSON.stringify(data) + '\n\n');
             },
             error: function( jqXhr, textStatus, errorThrown ) {
                 alert( errorThrown );
